# LocalMind

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: bm25.rs  embed.rs  extract.rs  index.rs  main.rs  monitor.rs  search.rs  tui.rs
