[package]
name = "localmind"
version = "0.1.0"
edition = "2021"
description = "Local semantic search engine in Rust — BERT embeddings, binary index, SIMD search, polling monitor, TUI"
repository = "https://github.com/Gabriele06-local/LocalMind"
license = "MIT"
keywords = ["search", "semantic-search", "bert", "rust", "nlp"]

[dependencies]
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
hf-hub = { version = "1.0.0-rc.1", features = ["blocking"] }
tokenizers = "0.23.1"
anyhow = "1"
serde_json = "1"
memmap2 = "0.9"
rayon = "1"
blake3 = "1"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
thiserror = "1"
wide = "1.5"
pdf-extract = "0.12"
zip = "8"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
